<resources>
    <string name="app_name">Messenger</string>
    <string name="title_error">Error!</string>
    <string name="title_ok">OK</string>
    <string name="desc_dialog_delete">Confirm to delete the message?</string>
    <string name="title_delete">Delete</string>
    <string name="title_cancel">Cancel</string>
    <string name="timer_desc">Are you there?</string>
    <string name="message_hint">Type something</string>
</resources>
