<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="isSending"
            type="androidx.databinding.ObservableBoolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/message_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingStart="12dp"
            android:paddingTop="24dp"
            android:paddingEnd="12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_new_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:enabled="@{!isSending}"
                android:hint="@string/message_hint"
                android:textColor="@color/black" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_sent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:enabled="@{!isSending}"
                android:src="@drawable/ic_send_white"
                app:backgroundTint="@color/colorPrimaryDark" />
        </LinearLayout>
    </LinearLayout>
</layout>